add method for finding crash directory